--- a/build.settings
+++ b/build.settings
@@ -9,7 +9,7 @@ settings = {
      },
 	 androidPermissions = {
 		"android.permission.INTERNET",
-		"com.android.vending.BILLING",
+		--"com.android.vending.BILLING",
 		"android.permission.ACCESS_NETWORK_STATE",
         "android.permission.WRITE_EXTERNAL_STORAGE"
 	},
@@ -43,13 +43,13 @@ settings = {
 		 ["plugin.gpgs"] =
         {
             publisherId = "com.coronalabs",
-            supportedPlatforms = { iphone=true, android=true }
+            supportedPlatforms = { android=true }
         },
-	--	["CoronaProvider.gameNetwork.apple"] =
-      --  {
-      --      publisherId = "com.coronalabs",
-       --     supportedPlatforms = { iphone=true, ["iphone-sim"]=true },
-      --  },
+		["CoronaProvider.gameNetwork.apple"] =
+        {
+            publisherId = "com.coronalabs",
+            supportedPlatforms = { iphone=true, ["iphone-sim"]=true },
+        },
 	   --key is the name passed to the Lua "require()"
 	--   ["CoronaProvider.gameNetwork.google"] =
 	 --  {
