--- a/build.settings
+++ b/build.settings
@@ -148,10 +148,10 @@ settings = {
 ['plugin.appodeal.FacebookAudience'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.Flurry'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.InMobi'] = { publisherId = 'com.coronalabs' },
---['plugin.appodeal.IronSource'] = { publisherId = 'com.coronalabs' },
+['plugin.appodeal.IronSource'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.Mobvista'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.MyTarget'] = { publisherId = 'com.coronalabs' },
---['plugin.appodeal.StartApp'] = { publisherId = 'com.coronalabs' },
+['plugin.appodeal.StartApp'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.MillenialMedia'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.Ogury'] = { publisherId = 'com.coronalabs' },
  
@@ -162,10 +162,10 @@ settings = {
 --['plugin.appodeal.FacebookAudience'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.Flurry'] = { publisherId = 'com.coronalabs' },
 ['plugin.appodeal.InMobi'] = { publisherId = 'com.coronalabs' },
---['plugin.appodeal.IronSource'] = { publisherId = 'com.coronalabs' },
+['plugin.appodeal.IronSource'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.Mobvista'] = { publisherId = 'com.coronalabs' },
 --['plugin.appodeal.MyTarget'] = { publisherId = 'com.coronalabs' },
---['plugin.appodeal.StartApp'] = { publisherId = 'com.coronalabs' },
+['plugin.appodeal.StartApp'] = { publisherId = 'com.coronalabs' },
 ['plugin.appodeal.Unity'] = { publisherId = 'com.coronalabs' },
 ['plugin.appodeal.Vungle'] = { publisherId = 'com.coronalabs' },
 ['plugin.appodeal.Tapjoy'] = { publisherId = 'com.coronalabs' },    
